[package]
name = "kcpserver"
version = "0.1.0"
authors = ["luyi <luyikk@126.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/kcp_server"
documentation = "https://docs.rs/kcpserver"
description = "fast kcp server frame."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
udp_server="0.3.3"
tokio="0.2"
bytes = "0.5"
log="0.4"
futures="0.3.5"
chrono="0.4"


[dev-dependencies]
time = "0.1"
rand = "0.3"
