[package]
name = "kcpserver"
version = "0.2.5"
authors = ["luyi <luyikk@126.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/kcp_server"
documentation = "https://docs.rs/kcpserver"
description = "fast kcp server frame."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
net2 = "0.2"
num_cpus="1.8"
log="0.4.11"
bytes = "0.5.6"
chrono="0.4"
ahash = "0.4.5"
xbinary = "0.1.2"
async-trait = "0.1.40"
async-mutex = "1.4.0"
