[package]
name = "kcpserver"
version = "1.0.3"
authors = ["luyi <luyikk@126.com>"]
edition = "2021"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/luyikk/kcp_server"
documentation = "https://docs.rs/kcpserver"
description = "fast kcp server frame."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
udp_server = "1"
bytes = "1"
thiserror = "1"
log = "0.4"
async-trait = "0.1.40"
aqueue = "1"
async-lock = "2.6"
data-rw = "1.6"
chrono="0.4"
atomic-waker = "1"
futures-lite="1"

[dev-dependencies]
env_logger = "0.10"
anyhow = "1"